--- a/content/manual/problems/cosmological-constant.mdx
+++ b/content/manual/problems/cosmological-constant.mdx
@@ -292,14 +292,76 @@ The framework is not merely mathematically complete — it is empirically testab
 
 The Tier-0 resolution differs from every prior approach in a specific structural way: it **determines** the vacuum counterterm from spectral data without modifying the Einstein equations, introducing additional long-range forces, or invoking anthropic selection.
 
-| Approach | Modifies GR? | New Forces? | Unique Λ? | OS Positive? | RG Invariant? | Falsifiable? |
-|---|---|---|---|---|---|---|
-| Weinberg no-go | — | — | ✗ | — | — | — |
-| Supersymmetry | ✗ | ✓ | ✗ | — | ✗ | partial |
-| String landscape | ✓ | ✓ | ✗ | — | — | ✗ |
-| Sequestering | ✓ | ✗ | partial | — | partial | partial |
-| Anthropic | ✗ | ✗ | ✗ | — | — | ✗ |
-| **Tier-0 (this work)** | **✗** | **✗** | **✓** | **✓** | **✓** | **✓** |
+<table>
+  <thead>
+    <tr>
+      <th>Approach</th>
+      <th>Modifies GR?</th>
+      <th>New Forces?</th>
+      <th>Unique $\Lambda$?</th>
+      <th>OS Positive?</th>
+      <th>RG Invariant?</th>
+      <th>Falsifiable?</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Weinberg no-go</td>
+      <td>—</td>
+      <td>—</td>
+      <td>✗</td>
+      <td>—</td>
+      <td>—</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td>Supersymmetry</td>
+      <td>✗</td>
+      <td>✓</td>
+      <td>✗</td>
+      <td>—</td>
+      <td>✗</td>
+      <td>partial</td>
+    </tr>
+    <tr>
+      <td>String landscape</td>
+      <td>✓</td>
+      <td>✓</td>
+      <td>✗</td>
+      <td>—</td>
+      <td>—</td>
+      <td>✗</td>
+    </tr>
+    <tr>
+      <td>Sequestering</td>
+      <td>✓</td>
+      <td>✗</td>
+      <td>partial</td>
+      <td>—</td>
+      <td>partial</td>
+      <td>partial</td>
+    </tr>
+    <tr>
+      <td>Anthropic</td>
+      <td>✗</td>
+      <td>✗</td>
+      <td>✗</td>
+      <td>—</td>
+      <td>—</td>
+      <td>✗</td>
+    </tr>
+    <tr>
+      <td><strong>Tier-0 (this work)</strong></td>
+      <td><strong>✗</strong></td>
+      <td><strong>✗</strong></td>
+      <td><strong>✓</strong></td>
+      <td><strong>✓</strong></td>
+      <td><strong>✓</strong></td>
+      <td><strong>✓</strong></td>
+    </tr>
+  </tbody>
+</table>
+
 
 Weinberg's no-go is respected: the framework does not dynamically relax $\Lambda$ by local equations of motion. Instead, it determines the subtraction constant non-arbitrarily from spectral data. The anthropic argument and landscape reasoning become unnecessary within the admissible class. Sequestering's global constraints are replaced by a compact hidden gauge sector with no propagating on-shell stress and an RG-invariant Ward identity fixing the condensate shift.
 
